Added EMA templates

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,15 +1,23 @@
 <idea-plugin>
     <id>com.github.carlosmateo89.ematemplate</id>
-    <name>EMA-Template</name>
-    <vendor>carlosmateo89</vendor>
+    <name>Ema-Template</name>
+    <vendor>Carmabs</vendor>
 
     <!-- Product and plugin compatibility requirements -->
     <!-- https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
+    <depends>org.jetbrains.android</depends>
+    <depends>org.jetbrains.kotlin</depends>
+    <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.modules.platform</depends>
+
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.carlosmateo89.ematemplate.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.carlosmateo89.ematemplate.services.MyProjectService"/>
+    </extensions>
+
+    <extensions defaultExtensionNs="com.android.tools.idea.wizard.template">
+        <wizardTemplateProvider implementation="com.github.carlosmateo89.ematemplate.config.WizardEmaTemplate"/>
     </extensions>
 
     <applicationListeners>
