--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 13 12:59:01 CEST 2021
-sdk.dir=/Users/cmateo.benito/Library/Android/sdk
+#Tue Jan 10 23:28:19 CET 2023
+sdk.dir=/Users/carmabs/Library/Android/sdk
