Refactor to support byl app

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.carmabs.ematemplate
-pluginName = Ema-Template
+pluginName = Arc-Template
 pluginVersion = 5.0.0
 pluginSinceBuild = 201
 pluginUntilBuild = 222.*
