--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 10 23:28:19 CET 2023
-sdk.dir=/Users/carmabs/Library/Android/sdk
+#Wed Apr 19 11:52:11 CEST 2023
+sdk.dir=/Users/cmateo.benito/Library/Android/sdk
