--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 10 23:28:19 CET 2023
-sdk.dir=/Users/carmabs/Library/Android/sdk
+#Sun Sep 17 13:58:26 CEST 2023
+sdk.dir=/Users/Carmabs/Library/Android/sdk
